--- a/memory-game/style.css
+++ b/memory-game/style.css
@@ -1,6 +1,3 @@
-/* =============================
-GENERAL STYLES 
-================================ */
 body {
   font-family: "Raleway", sans-serif;
   text-align: center;
@@ -18,9 +15,6 @@ body {
   font-size: 0;
 }
 
-/* =============================
-TYPOGRAPHY
-================================ */
 h1, h2 {
   text-transform: uppercase;
 }
@@ -53,50 +47,48 @@ a {
   letter-spacing: .06em;
 
   margin: 0 20px;
-  /* For hover style transition (bonus) */
+  
   border-bottom: 2px solid transparent;
-/*   transition: all .3s ease-in-out; */
 }
 
 a:hover {
   border-bottom: 2px solid white;
 }
-/* =============================
-HEADER
-================================ */
+
 header {
   background-color: #F15B31;
   padding: 30px 20px;
 }
 
-/* =============================
-NAV
-================================ */
 nav {
   background-color: #00A6B3;
   padding: 20px 0;
 }
-
-/* =============================
-MAIN SECTION
-================================ */
 
 main {
   width: 850px;
   margin: 35px auto;
 }
 
-
-/* =============================
-GAME BOARD
-================================ */
 img {
-  margin: 40px 8px 0;
+  margin: 40px 8px 40px;
 }
 
-/* =============================
-FOOTER
-================================ */
+div p{
+  display: inline;
+  font-size: 50px;
+  padding: 0 20px 0 20px;
+  color: rgb(37, 98, 139);
+  text-align: justify;
+}
+
+.scores {
+  color: black;
+  border: 6px solid rgb(37, 98, 139);
+  border-radius: 5%;
+  margin: 0 50px 0 50px;
+}
+
 footer {
   text-transform: uppercase;
   padding: 0 20px;
